<resources>
    <string name="app_name">CIUW</string>
    <string name="login_email_hint">test@example.com</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_pw_forgot">Forgot your password?</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_btn_register">REGISTER</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="login_first_name">First Name</string>
    <string name="login_last_name">Last Name</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password_upper">RESET PASSWORD</string>


    <string name="calendar">CALENDAR</string>
    <string name="message">MESSAGES</string>
    <string name="benefits">BENEFITS</string>
    <string name="contract">CONTRACT</string>
    <string name="meeting">MEETING</string>
    <string name="contact">CONTACT</string>
    <string name="miscellaneous">Miscellaneous</string>

    <string name="no_message">No messages are available.</string>
    <string name="no_event">No events are available.</string>



    <string name="verify_title">Verification code is sent to your email.</string>

    <string name="default_notification_channel_id" translatable="false">CIUW Notification Channel</string>
</resources>
