<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/login_bkg"
    android:weightSum="1"
    android:gravity="bottom"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/registerWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.38"
            android:background="@drawable/login_bkg_header">
            <ImageView
                android:id="@+id/btn_reset_password_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:tint="@color/whiteTextColor"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_back">
            </ImageView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_logo"
                android:layout_centerInParent="true">
            </ImageView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:layout_marginTop="@dimen/ForgotPasswordMarginTop"
                android:layout_marginBottom="@dimen/ForgotPasswordMarginBottom"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/ForgotPasswordTextSize"
                android:text="Forgot Password?"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/loginViewTextSize"
                android:text="@string/login_email"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginControlSize"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:layout_below="@id/tv_email"
                android:layout_marginTop="@dimen/registerViewMarginTopSize"
                android:background="@drawable/et_style"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="@dimen/loginViewTextSize" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:layout_marginTop="@dimen/ForgotPasswordMarginTop"
                android:layout_marginBottom="@dimen/ForgotPasswordMarginBottom"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/ForgotPasswordTextSize"
                android:text="Reset Password"/>
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:textColor="@color/whiteTextColor"
                android:textSize="@dimen/loginViewTextSize"
                android:layout_below="@id/et_email"
                android:text="New Password"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginControlSize"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:inputType="textPassword"
                android:layout_below="@id/tv_password"
                android:layout_marginTop="@dimen/registerViewMarginTopSize"
                android:maxLines="1"
                android:background="@drawable/et_style"
                android:textSize="@dimen/loginViewTextSize"
                android:paddingLeft="16dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loginControlSize"
                android:layout_marginLeft="@dimen/loginViewMarginLeftSize"
                android:layout_marginRight="@dimen/loginViewMarginLeftSize"
                android:background="@color/login_btn_bk_color"
                android:layout_marginTop="45dp"
                android:textColor="@color/whiteTextColor"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/btn_reset_password"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>